Finished task basic functions javascript code

--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
             </div>
         </div>
             <div class="inputTask">
-                <input type="text" id="new-task" placeholder="Agrega uma nova tarefa">
-                <button id="button-task">Agregar uma nova tarefa</button>
+                <div>
+                    <input type="text" id="new-task" placeholder="Agrega uma nova tarefa">
+                    <button id="button-task">Agregar uma nova tarefa</button>
+                </div>
+                <div>
+                    <button id="button-remove-task">Remover Tareas completadas</button>
+                </div>
             </div>
             <div class="completeTask boxtask">
-            <form class="formtask" id="form-task-Completed">
+            <div class="formtask" id="form-task-completed">   
 
-            </form>           
+            </div>           
         </div>
     </div>
     <script src="script.js"></script>
